--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,9 +1,11 @@
 <html>
   <body>
+    <h1><%- title %></h1>
     <% messages.map((message) => { %>
         <h2><%= message.user %></h2>
         <p><%= message.text %></p>
         <p><%= message.added %></p>
+        <a href="/message/<%= message.id %>/details">Details</a>
       <% }) %>
   </body>
 </html>
